trunk/tests/kiama/negative/name_errors/L1/7_whilename3.ob
MODULE whilename;

VAR
    bvar : BOOLEAN;

BEGIN
    WHILE (avar > 1) & (avar > 0) DO
        bvar := TRUE
    END
END whilename.
